--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is fun<h1>
+    <h1>This is fun</h1>
+    <p>all this super awesome helpful content</p>
   </body>
 </html>
